--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/src/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link href="https://cdn.syncfusion.com/ej2/material.css" rel="stylesheet">
-  <title>Vite App</title>
+  <title>Dashboard App</title>
 </head>
 
 <body>
